done clear all, task completed

--- a/src/styles/TaskListComponent.css
+++ b/src/styles/TaskListComponent.css
@@ -17,3 +17,8 @@
     background-color: transparent;
     border: none;
 }
+
+.taskListContainer .taskCompleted {
+    text-decoration: line-through;
+    color: gray;
+}
