--- a/src/styles/TaskItemComponent.css
+++ b/src/styles/TaskItemComponent.css
@@ -15,6 +15,14 @@
     padding: 0 5px;
 }
 
+.taskItemContainer input[type='text']:focus{
+    outline: none;
+}
+.taskItemContainer input[type='text'] {
+    border: none;
+    width: 75%;
+    color: grey;
+}
 .taskItemContainer .completed {
     text-decoration: line-through;
 }
