--- a/src/styles/TaskListComponent.css
+++ b/src/styles/TaskListComponent.css
@@ -9,13 +9,17 @@
 .taskListHeader {
     display: flex;
     padding: 1.5vh 0;
+    font-size: 14px;
+    color: rgb(166, 166, 166);
     justify-content: space-between;
     border-bottom: 1px solid rgb(166, 166, 166);
 }
 
 .taskListHeader button {
     background-color: transparent;
-    border: none;
+    border: none;   
+    color: rgb(166, 166, 166);
+
 }
 
 .taskListContainer .taskCompleted {
